--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
     
+    <section class="hero">
+        <header>
+            <h1><span>Loja Insana</span>CARS</h1>
+        
+            <nav>
+                <ul class="header-menu">
+                    <li><a href="#" class="item-menu">Home</a></li>
+                    <li><a href="#" class="item-menu">Carros</a></li>
+                    <li><a href="#" class="item-menu">Lojas</a></li>
+                    <li><a href="#" class="item-menu">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h2 id="titulo">A ENERGIA<span>QUE MOVE SEU VEICULO</span></h2>
+    </section>
 
 
     <!-- chamando o java -->
