--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- chamando o css -->
     <link rel="stylesheet" href="./src/css/estilo.css">
     <title>Projeto 5</title>
 </head>
@@ -22,6 +23,7 @@
             </nav>
         </header>
         <h2 id="titulo">A ENERGIA<span>QUE MOVE SEU VEICULO</span></h2>
+
     </section>
 
 
