--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul class="header-menu">
                     <li><a href="#" class="item-menu">Home</a></li>
-                    <li><a href="#" class="item-menu">Carros</a></li>
+                    <li><a href="https://www.audiusa.com/en/models/r8/r8-heritage/2024/overview/" class="item-menu">Carros</a></li>
                     <li><a href="#" class="item-menu">Lojas</a></li>
                     <li><a href="#" class="item-menu">Contato</a></li>
                 </ul>
